--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 22 18:51:17 AST 2020
-sdk.dir=/Users/lama/Library/Android/sdk/tools
+#Sat Jan 25 17:46:17 AST 2020
+sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
