--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // cloud fireStore
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+   //
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation "com.google.firebase:firebase-firestore:11.4.2"
+    implementation "com.firebaseui:firebase-ui-auth:3.0.0"
+    implementation "com.firebaseui:firebase-ui-firestore:3.0.0"
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 }
