update Sign up with google

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 28 09:38:11 AST 2020
-sdk.dir=C\:\\Users\\Lamia\\AppData\\Local\\Android\\Sdk
+#Tue Jan 28 18:51:43 AST 2020
+sdk.dir=/Users/lama/Library/Android/sdk/tools
