--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,22 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Controller.Sociodemo"></activity>
         <activity android:name=".LogInPage" />
-        <activity android:name=".WelcomePage" />
+        <activity android:name=".WelcomePage" >
+        <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+    </activity>
         <activity
             android:name=".Controller.Signup"
-            android:label="@string/app_name">
-            <intent-filter>
+            android:label="@string/app_name"/>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>!-->
 
         <meta-data
             android:name="preloaded_fonts"
