--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,30 +11,24 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/s_logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/s_logo"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.Sociodemo"></activity>
-        <activity android:name=".LogInPage" />
-        <activity android:name=".WelcomePage"/>
-        <activity android:name=".MainActivity">
-        <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-
-        <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
-    </activity>
-        <activity
-            android:name=".Controller.Signup"
-            android:label="@string/app_name"/>
-            <!--<intent-filter>
+        <activity android:name=".Controller.Sociodemo"/>
+        <activity android:name=".LogInPage"/>
+        <activity android:name=".WelcomePage">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>!-->
+        </activity>
+        <activity android:name=".MainActivity"/>
+
+        <activity android:name=".Controller.Signup" />
+
 
         <meta-data
             android:name="preloaded_fonts"
