--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,32 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/s_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/s_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.Sociodemo"/>
-        <activity android:name=".LogInPage"/>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Controller.Signup.Sociodemo"></activity>
+        <activity android:name=".LogInPage" />
         <activity android:name=".WelcomePage">
-            <intent-filter>
+
+
+        <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+    </activity>
+        <activity
+            android:name=".Controller.Signup.Signup"
+            android:label="@string/app_name"/>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".MainActivity"/>
-
-        <activity android:name=".Controller.Signup" />
-
+        </activity>!-->
 
         <meta-data
             android:name="preloaded_fonts"
