--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 05 20:21:14 AST 2020
-sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
+#Sat Feb 08 14:44:17 AST 2020
+sdk.dir=C\:\\Users\\Lamia\\AppData\\Local\\Android\\Sdk
