--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Controller.Signup.Sociodemo"></activity>
+       <activity android:name=".Controller.Homepage.Patient.Editprofile"></activity>
+        <activity android:name=".Controller.Homepage.Patient.EditSocio"></activity>
         <activity android:name=".LogInPage" />
         <activity android:name=".WelcomePage">
 
