--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,27 +16,26 @@
         android:roundIcon="@drawable/s_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".Controller.Signup.Sociodemo"></activity>
-        <activity android:name=".LogInPage" />
-        <activity android:name=".WelcomePage">
-
-
-        <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-
-        <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
-    </activity>
-        <activity
-            android:name=".Controller.Signup.Signup"
-            android:label="@string/app_name"/>
-            <!--<intent-filter>
+        <activity android:name=".MainActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>!-->
+        </activity>
+        <activity android:name=".Controller.Signup.Sociodemo"></activity>
+        <activity android:name=".LogInPage" />
+        <activity android:name=".WelcomePage"></activity>
+        <activity android:name=".Controller.Homepage.Patient.PatientReport"></activity>
+        <activity
+            android:name=".Controller.Signup.Signup"
+            android:label="@string/app_name"/>
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> !-->
 
         <meta-data
             android:name="preloaded_fonts"
