--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".Controller.Homepage.Patient.EditSocio"></activity>
         <activity android:name=".LogInPage" />
         <activity android:name=".WelcomePage"></activity>
-        <activity android:name=".Controller.Homepage.Patient.PatientReport"></activity>
+        <activity android:name=".Controller.Homepage.Report.PatientReport"></activity>
         <activity
             android:name=".Controller.Signup.Signup"
             android:label="@string/app_name"/>
