--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Feb 08 15:13:24 AST 2020
-sdk.dir=/Users/raghadaziz/Library/Android/sdk
+sdk.dir= C\:\\Users\\Lamia\\AppData\\Local\\Android\\Sdk
+# old directory: /Users/raghadaziz/Library/Android/sdk
