edit profile and socio-demo DONE

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".Controller.Signup.Sociodemo"></activity>
        <activity android:name=".Controller.Homepage.Patient.Editprofile"></activity>
         <activity android:name=".Controller.Homepage.Patient.EditSocio"></activity>
+        <activity android:name=".Controller.Homepage.Patient.AddDoctor"></activity>
+        <activity android:name=".Controller.Homepage.Patient.MyDoctor"></activity>
         <activity android:name=".LogInPage" />
         <activity android:name=".WelcomePage"></activity>
         <activity android:name=".Controller.Homepage.Report.PatientReport"></activity>
