[FIX] : Layout improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".SplashScreen"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Controller.Homepage.Calendar.Add_Appointment_Page"></activity>
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
-        <activity android:name=".Controller.Homepage.Patient.AddDoctor"></activity>
+            </intent-filter>
+        </activity>
+        <activity android:name=".Controller.Homepage.Patient.AddDoctor" />
         <activity android:name=".Controller.Homepage.Patient.MyDoctor" />
         <activity android:name=".Controller.Homepage.Calendar.Add_Medicine_Page" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Controller.Signup.Sociodemo" />
         <activity android:name=".Controller.Homepage.Patient.Editprofile" />
         <activity android:name=".Controller.Homepage.Patient.EditSocio" />
-        <activity android:name=".Controller.Homepage.Report.PatientReport"/>
+        <activity android:name=".Controller.Homepage.Report.PatientReport" />
         <activity android:name=".LogInPage" />
         <activity android:name=".Controller.Signup.Signup" />
         <activity android:name=".WelcomePage">
