--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@drawable/s_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.Homepage.Calendar.add_Appointment"></activity>
+        <activity android:name=".Controller.Homepage.Calendar.PatientMedicineDetail"></activity>
+        <activity android:name=".Controller.Homepage.Calendar.add_Appointment" />
         <activity android:name=".Controller.Homepage.Calendar.Add_Medicine_Page" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Controller.Signup.Sociodemo" />
