--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Controller.Homepage.Drafts.EditPatientTextDraftPage"></activity>
+        <activity android:name=".Controller.Homepage.Drafts.PatientTextDraftDetailPage" />
+        <activity android:name=".Controller.Homepage.Drafts.AddTextDraftPage" />
         <activity android:name=".Controller.Signup.GoogleCalendarConnection" />
         <activity
             android:name=".Controller.Signup.FitbitConnection"
