--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.Homepage.Drafts.EditPatientTextDraftPage"></activity>
+        <activity android:name=".Controller.Signup.Questionnairs"></activity>
+        <activity android:name=".Controller.Homepage.Drafts.EditPatientTextDraftPage" />
         <activity android:name=".Controller.Homepage.Drafts.PatientTextDraftDetailPage" />
         <activity android:name=".Controller.Homepage.Drafts.AddTextDraftPage" />
         <activity android:name=".Controller.Signup.GoogleCalendarConnection" />
