--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 repositories {
     mavenCentral()
@@ -35,15 +36,23 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Work Manager
+    implementation "android.arch.work:work-runtime:1.0.0"
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:appcompat-v7:29.+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:29.+'
+
+    //Fitbit Chrome Custome Tabs
     implementation 'androidx.browser:browser:1.0.0'
+
+    //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    // cloud fireStore
+
+    // Cloud FireStore
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     //
     implementation 'com.google.firebase:firebase-auth:19.0.0'
@@ -57,6 +66,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    // Image Handeling?
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
 }
