--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,12 @@ android {
 }
 repositories {
     mavenCentral()
-    maven { url 'https://maven.google.com' }
+    maven {
+        url 'https://maven.google.com'
+    }
+    maven { url "https://jitpack.io" }
+
+
 }
 
 dependencies {
@@ -45,7 +50,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // cloud fireStore
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    //
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
@@ -56,7 +60,9 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:6.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-
+    implementation 'com.github.uin3566:AllAngleExpandableButton:v1.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation 'com.github.shivpujan12:MediaPlayer:0.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-
+    implementation project(':lib')
 }
