--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,13 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        google()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -17,12 +21,20 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
+        mavenCentral()
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+
