--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation project(':lib')
 
+    // Periodic Activities
+    implementation 'com.nabinbhandari.android:permissions:3.8'
 
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
