--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //Work Manager
-    implementation "android.arch.work:work-runtime:1.0.0"
 
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -48,10 +46,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:29.+'
 
-    //Fitbit Chrome Custome Tabs
+    // Fitbit Chrome Custome Tabs
     implementation 'androidx.browser:browser:1.0.0'
 
-    //Test
+    // Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -83,4 +81,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    def work_version = "2.3.3"
+    implementation "androidx.work:work-runtime:$work_version"
 }
