NOTIFICATIONS FEATURE ADDED
Notes on notifications:
- notifications appear by added medicine/appointment name
- notifications appear by scheduled date and time
- notifications appear on foreground and background of the app
- repeat alarms (notifications) for medicine work
- cancel alarm for both types of reminders function implemented, when cancel is pressed, reminder is deleted from both firebase and notification scheduler
- medicine reminders are now more customized where user can decide whether they want the reminders every certain number of mins/hours/days for a certain number of times, no use in using period (number of days between first and last day) anymore

- add medicine layout has been slightly changed to include customized repeat options
- several files that are involved with medicine and appointment have been changed for notifications to properly work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -63,6 +64,7 @@
         <activity android:name=".controller.main.calendar.Add_Medicine_Page" />
         <activity android:name=".controller.main.calendar.PatientMedicineDetailPage" />
         <activity android:name=".controller.main.report.PatientReport" />
+        <activity android:name=".controller.Reminder.AlarmScheduler" />
 
         <meta-data
             android:name="preloaded_fonts"
@@ -72,6 +74,11 @@
             android:name=".fitbitManager.SensorService"
             android:enabled="true" >
         </service>
+        <service android:name=".controller.Reminder.ReminderAlarmService" />
+        <provider
+            android:name=".controller.Reminder.data.AlarmReminderProvider"
+            android:authorities="com.ksu.serene.Controller"
+            android:exported="false" />
 
     </application>
 
