--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,6 @@ dependencies {
 
     def work_version = "2.3.3"
     implementation "androidx.work:work-runtime:$work_version"
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
