--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,14 +55,14 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude module: 'support-annotations'
-        exclude module: 'support-v4'
-        exclude module: 'support-v13'
-        exclude module: 'recyclerview-v7'
-        exclude module: 'appcompat-v7'
-    }
+//    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+//        exclude group: 'com.android.support', module: 'appcompat'
+//        exclude module: 'support-annotations'
+//        exclude module: 'support-v4'
+//        exclude module: 'support-v13'
+//        exclude module: 'recyclerview-v7'
+//        exclude module: 'appcompat-v7'
+//    }
     androidTestImplementation('androidx.test.espresso:espresso-idling-resource:2.2.2')
 
     // Cloud FireStore
@@ -81,6 +81,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
     implementation 'com.github.shivpujan12:MediaPlayer:0.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
     implementation project(':lib')
 
     // Periodic Activities
