--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,15 @@ dependencies {
 //        exclude module: 'recyclerview-v7'
 //        exclude module: 'appcompat-v7'
 //    }
+//    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+//        exclude group: 'com.android.support', module: 'appcompat'
+//        exclude module: 'support-annotations'
+//        exclude module: 'support-v4'
+//        exclude module: 'support-v13'
+//        exclude module: 'recyclerview-v7'
+//        exclude module: 'appcompat-v7'
+//    }
+
     androidTestImplementation('androidx.test.espresso:espresso-idling-resource:2.2.2')
 
     // Cloud FireStore
