--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled true
+        }
+
     }
 }
 repositories {
@@ -53,24 +57,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:2.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
-//    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
-//        exclude group: 'com.android.support', module: 'appcompat'
-//        exclude module: 'support-annotations'
-//        exclude module: 'support-v4'
-//        exclude module: 'support-v13'
-//        exclude module: 'recyclerview-v7'
-//        exclude module: 'appcompat-v7'
-//    }
-//    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
-//        exclude group: 'com.android.support', module: 'appcompat'
-//        exclude module: 'support-annotations'
-//        exclude module: 'support-v4'
-//        exclude module: 'support-v13'
-//        exclude module: 'recyclerview-v7'
-//        exclude module: 'appcompat-v7'
-//    }
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude module: 'support-annotations'
+        exclude module: 'support-v4'
+        exclude module: 'support-v13'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'appcompat-v7'
+    }
 
     androidTestImplementation('androidx.test.espresso:espresso-idling-resource:2.2.2')
 
