--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     }
 
     androidTestImplementation('androidx.test.espresso:espresso-idling-resource:2.2.2')
+    //for graneed permission
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+
 
     // Cloud FireStore
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
