--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,5 +106,12 @@ dependencies {
 
     // heat map
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
+    
+    // calendar
+
+
+    // Toast
+    implementation 'com.github.Spikeysanju:MotionToast:1.3.1'
+
 
 }
