--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         </activity>
         <activity android:name=".controller.signup.GoogleCalendarConnection" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".controller.main.profile.PatientProfile" />
         <activity android:name=".controller.main.profile.MyDoctor" />
         <activity android:name=".controller.main.profile.AddDoctor" />
         <activity android:name=".controller.main.profile.Editprofile" />
