--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ captures/
 .cxx/
 
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+google-services.json
 
 # Freeline
 freeline.py
