--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,9 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.kailashdabhi:om-recorder:1.1.0'
     implementation 'com.cleveroad:audiovisualization:1.0.0'
@@ -28,6 +34,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
 
+    //for roboletric test for record audio
+    androidTestImplementation 'org.robolectric:robolectric:4.1'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
 
 
 }
