--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.google.gms:google-services:4.3.2'
+        //classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4' //Use latest version
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,6 +28,9 @@ allprojects {
             name 'Google'
         }
         maven { url 'https://jitpack.io' }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
 
 
         mavenCentral()
@@ -37,6 +41,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
 
 
