--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,7 @@ android {
 }
 repositories {
     mavenCentral()
-    maven {
-        url 'https://maven.google.com'
-    }
+    maven { url 'https://maven.google.com' }
     maven { url "https://jitpack.io" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 
@@ -55,7 +53,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
 
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -86,13 +83,12 @@ dependencies {
     }
 
     androidTestImplementation('androidx.test.espresso:espresso-idling-resource:2.2.2')
-    //for graneed permission
+    //for granted permission
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
     //for test DB
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
     androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
-
 
     // Cloud FireStore
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
@@ -111,6 +107,7 @@ dependencies {
     implementation 'com.github.shivpujan12:MediaPlayer:0.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    // Vice memo lib
     implementation project(':lib')
 
     // Periodic Activities
@@ -126,13 +123,13 @@ dependencies {
     def work_version = "2.3.3"
     implementation "androidx.work:work-runtime:$work_version"
 
+    // Circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    // heat map
+    // Heat map
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
     
-    // calendar
-
+    // Calendar
 
     // Toast
     implementation 'com.github.Spikeysanju:MotionToast:1.3.1'
