--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,16 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        debug {
+            storeFile file("$rootDir/buildsystem/debug.keystore")
+            storePassword "m34gj9b4r3"
+            keyAlias "key0"
+            keyPassword "m34gj9b4r3"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,6 +30,8 @@ android {
         }
         debug {
             testCoverageEnabled true
+            minifyEnabled false
+            signingConfig signingConfigs.debug
         }
     }
     testOptions {
@@ -34,6 +46,7 @@ android {
     }
 
 }
+
 repositories {
     mavenCentral()
     maven { url 'https://maven.google.com' }
@@ -63,7 +76,7 @@ dependencies {
     // Fitbit Chrome Custome Tabs
     implementation 'androidx.browser:browser:1.0.0'
 
-    // Test
+// Test
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:runner:1.2.0'
     testImplementation 'androidx.test:rules:1.2.0'
@@ -128,11 +141,35 @@ dependencies {
 
     // Heat map
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
-    
+
     // Calendar
 
     // Toast
     implementation 'com.github.Spikeysanju:MotionToast:1.3.1'
 
+    implementation 'com.google.api-client:google-api-client:1.30.9'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
+    implementation 'com.google.api-client:google-api-client-android:1.30.9'
+    implementation 'com.google.api-client:google-api-client-gson:1.30.9'
+    implementation 'com.google.android.gms:play-services-identity:7.3.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:0.20.0'
+
+    implementation 'com.pixplicity.easyprefs:library:1.9.0'
+
+
+    android {
+        packagingOptions {
+            exclude 'META-INF/DEPENDENCIES'
+            exclude 'META-INF/LICENSE'
+            exclude 'META-INF/LICENSE.txt'
+            exclude 'META-INF/license.txt'
+            exclude 'META-INF/NOTICE'
+            exclude 'META-INF/NOTICE.txt'
+            exclude 'META-INF/notice.txt'
+            exclude 'META-INF/ASL2.0'
+            exclude("META-INF/*.kotlin_module")
+        }
+    }
 
 }
