--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,6 +158,10 @@ dependencies {
     implementation 'com.pixplicity.easyprefs:library:1.9.0'
 
 
+    // image Slider
+    implementation 'com.github.smarteist:autoimageslider:1.3.5'
+
+    
     android {
         packagingOptions {
             exclude 'META-INF/DEPENDENCIES'
