--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:name=".MyApplication"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@drawable/small_serene_logo"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".controller.main.report.LocationHeatMap"/>
