--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,8 +142,6 @@ dependencies {
     // Heat map
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
 
-    // Calendar
-
     // Toast
     implementation 'com.github.Spikeysanju:MotionToast:1.3.1'
 
@@ -158,10 +156,10 @@ dependencies {
     implementation 'com.pixplicity.easyprefs:library:1.9.0'
 
 
-    // image Slider
-    implementation 'com.github.smarteist:autoimageslider:1.3.5'
+    // live chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-    
+
     android {
         packagingOptions {
             exclude 'META-INF/DEPENDENCIES'
