Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 11d45f9d65992da10aff8e88b161055858d0cace, reversing
changes made to e9872b4df6f30f2668f138279b7c3bbb5cf69e9e.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,6 +142,8 @@ dependencies {
     // Heat map
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
 
+    // Calendar
+
     // Toast
     implementation 'com.github.Spikeysanju:MotionToast:1.3.1'
 
@@ -156,10 +158,10 @@ dependencies {
     implementation 'com.pixplicity.easyprefs:library:1.9.0'
 
 
-    // live chart
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    // image Slider
+    implementation 'com.github.smarteist:autoimageslider:1.3.5'
 
-
+    
     android {
         packagingOptions {
             exclude 'META-INF/DEPENDENCIES'
